added external links and comments

--- a/todo
+++ b/todo
@@ -1,10 +1,6 @@
 -zoom in on images
--gifv for mjj
--contact
--view on github/website
--source code
 -footer
   -github link to this website code
--add comments to css
 -add items for payload
 -all games
+-mobile css
