replaced old css and js

--- a/todo
+++ b/todo
@@ -1,7 +1,5 @@
 -zoom in on images
--footer
-  -github link to this website code
--add items for payload
 -all games
 -mobile css
 -noscript
+-new favicon
